crates/bingo-surface-tui/src/snapshots/bingo_surface_tui__screens__skill_tool_120x40.snap
---
source: crates/bingo-surface-tui/src/screens.rs
expression: "draw_tree(120, 40, tree, ui, now)"
---
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮"
"│ ✻ Welcome to bingo!                                                                                                  │"
"│                                                                                                                      │"
"│   /help for help · /login codex to use a subscription                                                                │"
"│   cwd: /tmp/project                                                                                                  │"
"╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
"                                                                                                                        "
"> read the guide on the wire format                                                                                     "
"                                                                                                                        "
"❖ Skill(guide) the wire format                                                                                          "
"  ⎿  Base directory for this skill: ~/.bingo/skills/guide                                                               "
"                                                                                                                        "
"     Read this before answering a question about bingo itself.                                                          "
"                                                                                                                        "
"     - the kernel is small, and everything else is a plugin                                                             "
"     … +5 lines (ctrl+o to expand)                                                                                      "
"                                                                                                                        "
"⏺ One `Event` enum, one ordered stream per session.                                                                     "
"                                                                                                                        "
"                                                                                                                        "
"╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮"
"│ > ask anything · / for commands · ! for shell                                                                        │"
"╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
"? for shortcuts                                                                                                   fake-1"
